add allowFallback param to entries that can disable the fallback behaviour
make events not switch if the new event contains the song from the current event